<resources>
    <string name="app_name">Inventory App</string>
    <string name="info">"Product table contains "</string>
    <string name="products">" products \n\n"</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier">Supplier</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="dollar">$</string>
    <string name="product_overview">Product Overview</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Missing required data</string>
    <string name="no_items">There are no products…</string>
    <string name="get_started_by_adding_a_product">Get started by adding a product</string>
    <string name="product_name_">Product Name: </string>
    <string name="quantity_">Quantity: </string>
    <string name="price_">price: </string>
    <string name="supplier_name_">Supplier Name: </string>
    <string name="supplier_phone_">Supplier Phone Number: </string>
    <string name="add_product">Add a Product</string>
    <string name="edit_product">Edit product</string>
    <string name="delete_all">Delete all products</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="contact">contact</string>
    <string name="quantity_limit">"Quantity can't be more than 1000</string>
    <string name="quantity_cant_be_minus">quantity can\'t be less than 0</string>
    <string name="missing_product_name">Product name is required</string>
    <string name="missing_price">Price is required</string>
    <string name="missing_quantity">Quantity is required</string>
    <string name="missing_supplier_name">Supplier name is required</string>
    <string name="missing_phone_number">Phone number is required</string>
    <string name="phone_number_is_not_provided">Phone number is not provided</string>
    <string name="details">Details</string>
    <string name="sale">Sale</string>
</resources>
